Update src/main/java/com/mmb/service/FullLearningService.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>